[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://boss.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/AGENCYB.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://objects/boss_status.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 131.34, 125.903 )

[sub_resource type="Animation" id=2]
resource_name = "blink"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40.5197, 38.5314 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 41.2268, 38.1778 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[node name="boss" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." groups=[
"boss",
]]
scale = Vector2( 1.3034, 1.21462 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 2 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 3 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 4 )
disabled = true

[node name="Label" type="Label" parent="."]
self_modulate = Color( 1, 1, 0, 1 )
margin_left = -215.878
margin_top = -64.9742
margin_right = 217.122
margin_bottom = -24.9742
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "dsadsadsaddsadsa"
align = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
